--- a/SimpleLocationWeb/Pages/Admin/CarBrands/Delete.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/CarBrands/Delete.cshtml
@@ -5,15 +5,15 @@
     <input hidden asp-for="CarBrand.Id" />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary pl-3">Edit CarBrand</h2>
+            <h2 class="text-primary pl-3">Supprimer Marque</h2>
             <hr />
         </div>
         <div class="mb-3">
-            <label asp-for="CarBrand.Name"></label>
+            <label asp-for="CarBrand.Name">Nom Marque</label>
             <input type="text" asp-for="CarBrand.Name" disabled class="form-control" />
         </div>
-        <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Back to List</a>
+        <button type="submit" class="btn btn-danger" style="width:150px">Supprimer</button>
+        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Retour</a>
     </div>
 </form>
 
