--- a/SimpleLocationWeb/Pages/Admin/CarBrands/Create.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/CarBrands/Create.cshtml
@@ -4,17 +4,17 @@
 <form method="post">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary pl-3">Create Car Brand</h2>
+            <h2 class="text-primary pl-3">Créer Marque</h2>
             <hr />
         </div>
         <div asp-validation-summary="All"></div>
         <div class="mb-3">
-            <label asp-for="CarBrand.Name"></label>
+            <label asp-for="CarBrand.Name">Nom Marque</label>
             <input type="text" asp-for="CarBrand.Name" class="form-control" />
             <span asp-validation-for="CarBrand.Name" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
-        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Back to List</a>
+        <button type="submit" class="btn btn-primary" style="width:150px">Créer</button>
+        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Retour</a>
     </div>
 </form>
 
