--- a/SimpleLocationWeb/Pages/Admin/CarBrands/Edit.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/CarBrands/Edit.cshtml
@@ -5,17 +5,17 @@
     <input hidden asp-for="CarBrand.Id" />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary pl-3">Edit CarBrand</h2>
+            <h2 class="text-primary pl-3">Modifier Marque</h2>
             <hr />
         </div>
         <div asp-validation-summary="All"></div>
         <div class="mb-3">
-            <label asp-for="CarBrand.Name"></label>
+            <label asp-for="CarBrand.Name">Nom Marque</label>
             <input type="text" asp-for="CarBrand.Name" class="form-control" />
             <span asp-validation-for="CarBrand.Name" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Edit</button>
-        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Back to List</a>
+        <button type="submit" class="btn btn-primary" style="width:150px">Modifier</button>
+        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Retour</a>
     </div>
 </form>
 
