--- a/SimpleLocationWeb/Pages/Admin/CarBrands/Index.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/CarBrands/Index.cshtml
@@ -6,11 +6,11 @@
  <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">CarBrand List</h2>
+            <h2 class="text-primary">Liste des Marques</h2>
         </div>
         <div class="col-6 text-end">
             <a asp-page="create" class="btn btn-primary">
-                <i class="bi bi-pencil-square"></i> &nbsp;Create New CarBrand
+                <i class="bi bi-pencil-square"></i> &nbsp;Créer Nouvelle Marque
             </a>
         </div>
     </div>
@@ -20,7 +20,7 @@
         <thead>
             <tr>
                 <th>
-                    CarBrand Name
+                    Nom Marque
                 </th>  
             </tr>
         </thead>
