--- a/SimpleLocationWeb/Pages/Admin/Categories/Create.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/Categories/Create.cshtml
@@ -4,22 +4,22 @@
 <form method="post">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary pl-3">Create Category</h2>
+            <h2 class="text-primary pl-3">Créer Catégorie</h2>
             <hr />
         </div>
         <div asp-validation-summary="All"></div>
         <div class="mb-3">
-            <label asp-for="Category.Name"></label>
+            <label asp-for="Category.Name">Nom Catégorie</label>
             <input type="text" asp-for="Category.Name" class="form-control"/>
             <span asp-validation-for="Category.Name" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Category.DisplayOrder"></label>
+            <label asp-for="Category.DisplayOrder">Ordre</label>
             <input type="text" asp-for="Category.DisplayOrder" class="form-control" />
             <span asp-validation-for="Category.DisplayOrder" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
-        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Back to List</a>
+        <button type="submit" class="btn btn-primary" style="width:150px">Créer</button>
+        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Retour</a>
     </div>
 </form>
 
