--- a/SimpleLocationWeb/Pages/Admin/Categories/Edit.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/Categories/Edit.cshtml
@@ -5,22 +5,22 @@
     <input hidden asp-for="Category.Id" />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary pl-3">Edit Category</h2>
+            <h2 class="text-primary pl-3">Modifier Catégorie</h2>
             <hr />
         </div>
         <div asp-validation-summary="All"></div>
         <div class="mb-3">
-            <label asp-for="Category.Name"></label>
+            <label asp-for="Category.Name">Nom Catégorie</label>
             <input type="text" asp-for="Category.Name" class="form-control"/>
             <span asp-validation-for="Category.Name" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="Category.DisplayOrder"></label>
+            <label asp-for="Category.DisplayOrder">Ordre</label>
             <input type="text" asp-for="Category.DisplayOrder" class="form-control" />
             <span asp-validation-for="Category.DisplayOrder" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Edit</button>
-        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Back to List</a>
+        <button type="submit" class="btn btn-primary" style="width:150px">Modifier</button>
+        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Retour</a>
     </div>
 </form>
 
