--- a/SimpleLocationWeb/Pages/Admin/Categories/Index.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/Categories/Index.cshtml
@@ -6,11 +6,11 @@
  <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Category List</h2>
+            <h2 class="text-primary">Liste des Catégories</h2>
         </div>
         <div class="col-6 text-end">
             <a asp-page="create" class="btn btn-primary">
-                <i class="bi bi-pencil-square"></i> &nbsp;Create New Category
+                <i class="bi bi-pencil-square"></i> &nbsp;Créer Nouvelle Catégorie
             </a>
         </div>
     </div>
@@ -20,10 +20,10 @@
         <thead>
             <tr>
                 <th>
-                    Category Name
+                    Nom Catégorie
                 </th>
                 <th>
-                    Display Order
+                    Ordre
                 </th>
             </tr>
         </thead>
