--- a/SimpleLocationWeb/Pages/Admin/Order/OrderList.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/Order/OrderList.cshtml
@@ -4,7 +4,7 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Order List</h2>
+            <h2 class="text-primary">Liste des Locations</h2>
         </div>
         <div class="col-6 text-end">
            
@@ -15,13 +15,9 @@
     <table id="DT_load" class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <th>Email</th>
-                <th>Order Total</th>
-                <th>Pick Up Date</th>
-                <th>Pick Up Time</th>
-                <th>Pick Time Of Return</th>
-                <th>Pick Date Of Return</th>
+                <th>Prix Total</th>
                 <th></th>
             </tr>
         </thead>
