--- a/SimpleLocationWeb/Pages/Admin/Users/Edit.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/Users/Edit.cshtml
@@ -7,12 +7,12 @@
         <div class="row pb-2">
             <div class="col-9">
                 <h2 class="text-primary pl-3">
-                    Update User
+                    Modifier Client
                 </h2>
                 <hr />
                 <div asp-validation-summary="All"></div>
                 <div class="mb-3">
-                    <label asp-for="User.UserName"></label>
+                    <label asp-for="User.UserName">Nom Utilisateur</label>
                     <input type="text" asp-for="User.UserName" class="form-control" />
                     <span asp-validation-for="User.UserName" class="text-danger"></span>
                 </div>
@@ -22,25 +22,25 @@
                     <span asp-validation-for="User.Email" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <label asp-for="User.PhoneNumber"></label>
+                    <label asp-for="User.PhoneNumber">Téléphone</label>
                     <input asp-for="User.PhoneNumber" class="form-control"></input>
                     <span asp-validation-for="User.PhoneNumber" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <label asp-for="User.FirstName"></label>
+                    <label asp-for="User.FirstName">Nom</label>
                     <input asp-for="User.FirstName" class="form-control"></input>
                     <span asp-validation-for="User.FirstName" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <label asp-for="User.LastName"></label>
+                    <label asp-for="User.LastName">Prenom</label>
                     <input asp-for="User.LastName" class="form-control"></input>
                     <span asp-validation-for="User.LastName" class="text-danger"></span>
                 </div>
                 
             </div>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
-        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Back to List</a>
+        <button type="submit" class="btn btn-primary" style="width:150px">Modifier</button>
+        <a asp-page="Index" class="btn btn-secondary" style="width:170px">Retour</a>
     </div>
 </form>
 
