--- a/SimpleLocationWeb/Pages/Customer/Cart/Index.cshtml
+++ b/SimpleLocationWeb/Pages/Customer/Cart/Index.cshtml
@@ -6,7 +6,7 @@
     @if (Model.LocationCarCartList.Count() == 0)
     {
         <div>
-            Please add items to shopping cart.
+            <h3>Veuillez ajouter vos location au panier</h3>
         </div>
     }
     else
