--- a/SimpleLocationWeb/Pages/Customer/OrderCustomer/OrderCustomerList.cshtml
+++ b/SimpleLocationWeb/Pages/Customer/OrderCustomer/OrderCustomerList.cshtml
@@ -6,7 +6,7 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Order Customer List</h2>
+            <h2 class="text-primary">Liste de vos Locations</h2>
         </div>
         <div class="col-6 text-end">
         </div>
@@ -16,8 +16,8 @@
     <table class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-                <th>Order Date</th>
-                <th>Order Total</th>
+                <th>Date de Commande</th>
+                <th>Prix Total</th>
                 <th></th>
             </tr>
         </thead>
