--- a/SimpleLocationWeb/Pages/Shared/_AdminDropdownPartial.cshtml
+++ b/SimpleLocationWeb/Pages/Shared/_AdminDropdownPartial.cshtml
@@ -9,10 +9,10 @@
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin</a>
         <div class="dropdown-menu">
-            <a class="dropdown-item" asp-area="" asp-page="/Admin/Users/Index">Users</a>
-            <a class="dropdown-item" asp-area="" asp-page="/Admin/Cars/Index">Cars</a>
+            <a class="dropdown-item" asp-area="" asp-page="/Admin/Users/Index">Clients</a>
+            <a class="dropdown-item" asp-area="" asp-page="/Admin/Cars/Index">Voitures</a>
             <a class="dropdown-item" asp-area="" asp-page="/Admin/Categories/Index">Categories</a>
-            <a class="dropdown-item" asp-area="" asp-page="/Admin/CarBrands/Index">Car Brands</a>
+            <a class="dropdown-item" asp-area="" asp-page="/Admin/CarBrands/Index">Marques</a>
             <div class="dropdown-divider"></div>
         </div>
     </li>
